# LR1

./: .gitignore  CMakeLists.txt  README.md
inc/: bd.hpp  console.h  stroki.h
src/: bd.cpp  console.cpp  main.cpp  old.cpp  stroki.cpp
